text added to reset.css, * style font added to style.css, and header added to index.html

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <header>
-            Paula 'Fel' Gonzalez
+            <h1>Paula 'Fel' Gonzalez</h1>
         </header>
-        
+
 
     </body>
 </html>
