--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
      <title>Portfolio</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1"/>
-        <link rel="stylesheet" type="text/css" href="./assets/reset.css"/>
+        <!--<link rel="stylesheet" type="text/css" href="./assets/reset.css"/>-->
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
     </head>
     <body>
