--- a/index.html
+++ b/index.html
@@ -4,12 +4,28 @@
      <title>Portfolio</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1"/>
-        <!--<link rel="stylesheet" type="text/css" href="./assets/reset.css"/>-->
+        <link rel="stylesheet" type="text/css" href="./assets/reset.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
     </head>
     <body>
         <header>
             <h1>Paula 'Fel' Gonzalez</h1>
+            <nav>
+                <ul>
+                    <li>
+                        About Me
+                    </li>
+                    <li>
+                        Placeholder
+                    </li>
+                    <li>
+                        Placeholder
+                    </li>
+                    <li>
+                        Placeholder
+                    </li>
+                </ul>
+            </nav>
         </header>
 
 
