added a main and section within main to the HTML, also tweaked size of font in nav

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             </nav>
         </header>
 
+        <main>
+            <section>
+                Help
+            </section>
+        </main>
+
 
     </body>
 </html>
