added another section in html, added more code to section and main css

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
             <section>
                 Help
             </section>
+
+            <section>
+                Wahoo
+            </section>
         </main>
 
 
