--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
      <title>Portfolio</title>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1"/>
+        <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" type="text/css" href="./assets/reset.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
     </head>
@@ -16,13 +16,13 @@
                         About Me
                     </li>
                     <li>
-                        Placeholder
+                        Work
                     </li>
                     <li>
-                        Placeholder
+                        Contact Me
                     </li>
                     <li>
-                        Placeholder
+                        Resume
                     </li>
                 </ul>
             </nav>
@@ -31,25 +31,47 @@
         <main>
             <section>
                 <img src="./assets/images/Placeholder.png">
+                <h2>
+                    About Me
+                </h2>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
 
             <section>
+                <h2>
+                    Work
+                </h2>
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
+
+            <section>
+                Hlp
+            </section>
         </main>
 
-        <section>
-            <article>
-                
-                help
-            </article>
-        </section>
-
+        <footer>
+            <h2>
+                Contact Me
+            </h2>
+            <ul>
+                <li>
+                    Phone number
+                </li>
+                <li>
+                    Website
+                </li>
+                <li>
+                    Github
+                </li>
+                <li>
+                    Other socials
+                </li>
+            </ul>
+        </footer>
 
     </body>
 </html>
