Added transitions to li in nav -> transition in css, and added class to HTMl + added the youtube tutorial link I used into the README.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
             <h1>Paula 'Fel' Gonzalez</h1>
             <nav>
                 <ul>
-                    <li>
+                    <li class="underline-hover">
                         About Me
                     </li>
-                    <li>
+                    <li class="underline-hover">
                         Work
                     </li>
-                    <li>
+                    <li class="underline-hover">
                         Contact Me
                     </li>
-                    <li>
+                    <li class="underline-hover">
                         Resume
                     </li>
                 </ul>
