--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
      <title>Portfolio</title>
         <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width"/>
+        <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="./assets/reset.css"/>
         <link rel="stylesheet" type="text/css" href="./assets/style.css"/>
     </head>
@@ -30,13 +30,22 @@
 
         <main>
             <section>
-                <img src="./assets/images/Placeholder.png">
-                <h2>
-                    About Me
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                </p>
+                <!-- fuck it we ball-->
+                <table cellspacing="10">
+                    <tr>
+                        <td>
+                            <img src="./assets/images/Placeholder.png" alt="placeholder">
+                        </td>
+                        <td>
+                            <h2>
+                                About Me
+                            </h2>
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </td>
+                    </tr>
+                </table>
             </section>
 
             <section>
