added content to the footer, added images to be organized, added links to footer, minor adjustments in text size in header and footer

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <nav>
                 <ul>
                     <li class="underline-hover">
-                        About Me
+                        <b>About Me</b>
                     </li>
                     <li class="underline-hover">
-                        Work
+                        <b>Work</b>
                     </li>
                     <li class="underline-hover">
-                        Contact Me
+                        <b>Contact Me</b>
                     </li>
                     <li class="underline-hover">
-                        Resume
+                        <b>Resume</b>
                     </li>
                 </ul>
             </nav>
@@ -30,11 +30,10 @@
 
         <main>
             <section>
-                <!-- fuck it we ball-->
                 <table cellspacing="10">
                     <tr>
                         <td>
-                            <img src="./assets/images/Placeholder.png" alt="placeholder">
+                            <img id="contact-img" src="./assets/images/Placeholder.png" alt="placeholder contact image">
                         </td>
                         <td>
                             <h2>
@@ -52,32 +51,32 @@
                 <h2>
                     Work
                 </h2>
+                <img src="./assets/images/Placeholder.png">
+                <img src="./assets/images/Placeholder.png">
+                <img src="./assets/images/Placeholder.png">
+                <img src="./assets/images/Placeholder.png">
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
-
-            <section>
-                Hlp
-            </section>
         </main>
 
         <footer>
-            <h2>
-                Contact Me
-            </h2>
+            <h3>
+                <i>Contact Me </i>
+            </h3>
             <ul>
                 <li>
-                    Phone number
+                    <i>469-358-1248</i>
                 </li>
                 <li>
-                    Website
+                    <a href="#"><i>Website</i></a>
                 </li>
                 <li>
-                    Github
+                    <a href="https://github.com/gonz951"><i>Github</i></a>
                 </li>
                 <li>
-                    Other socials
+                    <a href="#"><i>Other socials</i></a>
                 </li>
             </ul>
         </footer>
