--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <nav>
                 <ul>
                     <li class="underline-hover">
-                        <b>About Me</b>
+                        <a href=""><b>About Me</b></a>
                     </li>
                     <li class="underline-hover">
-                        <b>Work</b>
+                        <a href=""><b>Work</b></a>
                     </li>
                     <li class="underline-hover">
-                        <b>Contact Me</b>
+                        <a href=""><b>Contact Me</b></a>
                     </li>
                     <li class="underline-hover">
-                        <b>Resume</b>
+                        <a href=""><b>Resume</b></a>
                     </li>
                 </ul>
             </nav>
@@ -51,10 +51,11 @@
                 <h2>
                     Work
                 </h2>
-                <img src="./assets/images/Placeholder.png">
-                <img src="./assets/images/Placeholder.png">
-                <img src="./assets/images/Placeholder.png">
-                <img src="./assets/images/Placeholder.png">
+                <img id="main-img" class="example" src="./assets/images/Placeholder.png" alt="main placeholder image">
+                <img class="example" src="./assets/images/Placeholder.png" alt="placeholder image">
+                <img class="example" src="./assets/images/Placeholder.png" alt="placeholder image">
+                <img class="example" src="./assets/images/Placeholder.png" alt="placeholder image">
+                <img class="example" src="./assets/images/Placeholder.png" alt="placeholder image">
                 <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
