added links to navigate onto the same page

--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <nav>
                 <ul>
                     <li class="underline-hover">
-                        <a href=""><b>About Me</b></a>
+                        <a href="#AboutMe"><b>About Me</b></a>
                     </li>
                     <li class="underline-hover">
-                        <a href=""><b>Work</b></a>
+                        <a href="#Work"><b>Work</b></a>
                     </li>
                     <li class="underline-hover">
-                        <a href=""><b>Contact Me</b></a>
+                        <a href="#ContactMe"><b>Contact Me</b></a>
                     </li>
                     <li class="underline-hover">
-                        <a href=""><b>Resume</b></a>
+                        <a href="#"><b>Resume</b></a>
                     </li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
                             <img id="contact-img" src="./assets/images/Placeholder.png" alt="placeholder contact image">
                         </td>
                         <td>
-                            <h2>
+                            <h2 id="AboutMe">
                                 About Me
                             </h2>
                             <p>
@@ -48,7 +48,7 @@
             </section>
 
             <section>
-                <h2>
+                <h2 id="Work">
                     Work
                 </h2>
                 <img id="main-img" class="example" src="./assets/images/Placeholder.png" alt="main placeholder image">
@@ -63,7 +63,7 @@
         </main>
 
         <footer>
-            <h3>
+            <h3 id="ContactMe">
                 <i>Contact Me </i>
             </h3>
             <ul>
