--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-     <title>Portfolio</title>
+     <title>Fel Gonzalez's Portfolio</title>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, intial-scale=1.0"/>
         <link rel="stylesheet" type="text/css" href="./assets/reset.css"/>
