--- a/index.html
+++ b/index.html
@@ -40,7 +40,23 @@
                                 About Me
                             </h2>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                                Having started coding in middle school, it felt like a natural advancement to seek it out as a career path. Fel is currently enrolled in a coding bootcamp to improve their skills and start building brand new ones.
+                            </p>
+                            <p>
+                                Interests would include (but not limited to): 
+                                <article>
+                                    <ul>
+                                        <li>
+                                            Drawing, art, etc. (it helps with picking out color schemes for websites)
+                                        </li>
+                                        <li>
+                                            Playing games (mostly on the switch)
+                                        </li>
+                                        <li>
+                                            And enjoying fishing as an aesthetic
+                                        </li>
+                                    </ul>
+                                </article>
                             </p>
                         </td>
                     </tr>
@@ -67,7 +83,7 @@
                 <img class="example" src="./assets/images/Placeholder.png" alt="placeholder image">
                 </a>
                 <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                Currently a W.I.P (work in progress), but will be improved upon in the future.
                 </p>
             </section>
         </main>
