added comments in CSS and HTML on things to be improved upon later

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>Paula 'Fel' Gonzalez</h1>
             <nav>
                 <ul>
+                    <!--indent list later-->
                     <li class="underline-hover">
                         <a href="#AboutMe"><b>About Me</b></a>
                     </li>
@@ -22,7 +23,8 @@
                         <a href="#ContactMe"><b>Contact Me</b></a>
                     </li>
                     <li class="underline-hover">
-                        <a href="#"><b>Resume</b></a>
+                        <!--resume to be added once I have one-->
+                        <a href="#"></a><b>Resume</b></a>
                     </li>
                 </ul>
             </nav>
